# hf_rag_agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  blog_post.md  pyproject.toml
data/: corpus_manifest.json  eval_results.json  eval_set.json
notebooks/: 01_inspect_corpus.ipynb  02_evaluate_retrieval.ipynb  03_evaluate_chunked_retrieval.ipynb
src/hf_rag/: config.py
src/hf_rag/agent/: graph.py  prompts.py  query_rewriter.py  tools.py
src/hf_rag/chat/: cli.py
src/hf_rag/eval/: eval_set.py  metrics.py  runner.py
src/hf_rag/ingestion/: chunker.py  embedder.py  fetcher.py
src/hf_rag/retrieval/: base.py  dense.py  reranking.py
tests/: test_chunker.py  test_embedder.py  test_fetcher.py  test_metrics.py  test_query_rewriter.py  test_retrieval.py  test_runner.py
