[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hf-rag-agent"
version = "0.1.0"
description = "Conversational RAG agent over the Hugging Face Transformers documentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain[openai]>=1.3.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "python-dotenv>=1.0.0",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.10.9",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
]

[project.scripts]
hf-fetch  = "hf_rag.ingestion.fetcher:main"
hf-chunk  = "hf_rag.ingestion.chunker:main"
hf-embed  = "hf_rag.ingestion.embedder:main"
hf-eval   = "hf_rag.eval.runner:main"
hf-chat   = "hf_rag.chat.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "ruff>=0.15.13",
]
